expose compaction in rest api
